testing github actions;
Signed-off-by: aditya109 <adikid1996@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,6 +25,9 @@ jobs:
       # You may pin to the exact commit or the version.
       # uses: nanasess/setup-chromedriver@cc57e407ab3004f399e5452ae6ee2eeeeaaa8da4
       uses: nanasess/setup-chromedriver@v1.0.7
+      with:
+        # The chromedriver version to install
+        chromedriver-version: '100.0.4896.60'
     
     - name: Test
       run: go test -v ./... -json > reports/test-report.json
