--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,6 +22,7 @@ jobs:
       uses: browser-actions/setup-chrome@v0.0.0
         
     - name: Setup Chromedriver
+      uses: apt-get install chromedriver
     
     - name: Test
       run: go test -v ./... -json > reports/test-report.json
