--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,9 @@ jobs:
       uses: browser-actions/setup-chrome@v0.0.0
         
     - name: Setup Chromedriver
-      uses: apt-get install chromedriver
+      # You may pin to the exact commit or the version.
+      # uses: nanasess/setup-chromedriver@cc57e407ab3004f399e5452ae6ee2eeeeaaa8da4
+      uses: nanasess/setup-chromedriver@v1.0.7
     
     - name: Test
       run: go test -v ./... -json > reports/test-report.json
