--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,4 +19,5 @@ jobs:
         go-version: 1.17
     
     - name: Test
-      run: go test -v ./... -json > reports/test-report.json
+      # run: go test -v ./... -json > reports/test-report.json
+      run: go test -v ./... 
