--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,14 @@ jobs:
 
     - uses: browser-actions/setup-chrome@latest
       run: chrome --version
-    
+
+    - uses: actions/checkout@v2
+    - uses: nanasess/setup-chromedriver@v1
+    - run: |
+        export DISPLAY=:99
+        chromedriver --url-base=/wd/hub &
+        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+
     - name: Test
       # run: go test -v ./... -json > reports/test-report.json
       run: go test -v ./... 
