testing github actions;
Signed-off-by: aditya109 <adikid1996@gmail.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.17
 
     - uses: browser-actions/setup-chrome@latest
-      run: chrome --version
+    - run: chrome --version
 
     - uses: actions/checkout@v2
     - uses: nanasess/setup-chromedriver@v1
